# NSD-decoding-autoresearch

./: .gitignore  CLAUDE.md  README.md  RESULTS.md  plot_results.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py  train_nsd_decoding.py  utils.py
experiments/sweep_all_v1/: launch.sh  log_0.txt  log_1.txt  log_2.txt  log_3.txt
experiments/sweep_distill_v1/: analysis.ipynb  launch.sh  results.jsonl
experiments/sweep_distill_v2/: analysis.ipynb  launch.sh  results.jsonl
experiments/sweep_id_v1/: analysis.ipynb  launch.sh  results.jsonl
experiments/sweep_id_v2/: analysis.ipynb  launch.sh  results.jsonl
experiments/sweep_v4/: launch.sh
experiments/sweep_v4_nc/: analysis.ipynb
experiments/testing_full_ts/: full_ts_id_subj01_default.txt  full_ts_id_subj01_default_1.txt
metadata/: nsd_clip_coco_targets.npy
notebooks/: nsd_cococlip_metadata.ipynb  nsd_flat_cococlip_prep.ipynb  nsd_flat_pca.ipynb  score_mindeyev2.ipynb
src/nsd_decoding/: nsd_flat_cococlip_decoding.py  nsd_flat_cococlip_decoding_distill_v1.py  nsd_flat_cococlip_decoding_distill_v2.py  nsd_flat_cococlip_decoding_id_v1.py  nsd_flat_cococlip_decoding_id_v2.py  nsd_flat_cococlip_decoding_v0.py  nsd_flat_cococlip_decoding_v4.py  nsd_flat_cococlip_full_ts_decoding.py  nsd_flat_cococlip_full_ts_decoding_id_v1.py
src/nsd_decoding/working/: nsd_flat_cococlip_decoding_id_v1.py  nsd_flat_cococlip_full_ts_decoding_id_v1.py  nsd_flat_cococlip_full_ts_decoding_v1.py
