[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nsd-decoding"
version = "0.1.0"
description = "fMRI decoding from the Natural Scenes Dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "numpy",
    "pillow",
    "torch>=2.0",
]

[tool.ruff]
line-length = 100
