[project]
name = "nsd-decoding"
version = "0.1.0"
description = "fMRI decoding from the Natural Scenes Dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
